bookstore-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstore-app
  template:
    metadata:
      labels:
        app: bookstore-app
    spec:
      containers:
        - name: bookstore-app
          image: bookstore:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
