bookstore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-app
spec:
  type: ClusterIP
  selector:
    app: bookstore-app
  ports:
    - port: 8080
      targetPort: 8082
